SERVER-92987 Guard against SBE double-pushdown (#25853)

GitOrigin-RevId: d057594421aef2dcd6525a8321adb944729a2320